@@ -127,13 +127,14 @@ private:
     wxDECLARE_NO_COPY_CLASS(wxNotificationMessageBase);
 };
 
-#if defined(__WXGTK__) && (wxUSE_LIBHILDON || wxUSE_LIBHILDON2)
-    #include "wx/gtk/hildon/notifmsg.h"
 /*
-    TODO: provide support for
-        - libnotify (Gnome)
-        - Growl (http://growl.info/, OS X)
+    TODO: Implement under OS X using notification centre (10.8+) or
+          Growl (http://growl.info/) for the previous versions.
  */
+#if defined(__WXGTK__) && wxUSE_LIBNOTIFY
+    #include "wx/gtk/notifmsg.h"
+#elif defined(__WXGTK__) && (wxUSE_LIBHILDON || wxUSE_LIBHILDON2)
+    #include "wx/gtk/hildon/notifmsg.h"
 #elif defined(__WXMSW__) && wxUSE_TASKBARICON && wxUSE_TASKBARICON_BALLOONS
     #include "wx/msw/notifmsg.h"
 #else
